eks-vpn-connection-k8s-on-premise/load-balancer-config/load-balancer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: movie-web
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts: 
        - name: nginx-configmap
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx-configmap
        configMap:
          name: load-balancer-configmap
