eks-vpn-connection-k8s-on-premise/load-balancer-config/load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: movie-web
spec:
  type: ClusterIP  
  selector:
    app: nginx    
  ports:
    - protocol: TCP
      port: 80     
      targetPort: 80
