eks-vpn-connection-k8s-on-premise/load-balancer-config/kubernetes-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-type: "nlb"
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:323135480174:certificate/49590d55-5238-444f-9eda-df59fd8ffa1a
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol-version: HTTPS
spec:
  rules:
    - host: kubernetes-dashboard.nhatanhdevops.shop
      http:
        paths:
          - path: /  
            pathType: Prefix  
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
