eks-vpn-connection-k8s-on-premise/load-balancer-config/movie-web-eks-ingress-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-web-frontend-ingress
  namespace: movie-web
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-type: "nlb"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:323135480174:certificate/49590d55-5238-444f-9eda-df59fd8ffa1a
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - host: eks-movie.nhatanhdevops.shop
      http:
        paths:
          - path: /  
            pathType: Prefix  
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
